--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "PhD student"
 title_separator          : "-"
 name                     : &name "Meiguang Jin"
-description              : &description "PhD student at University of Bern"
+description              : &description "PhD student at Universität Bern"
 url                      : https://meiguangjin.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "meiguangjin.github.io"
