--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "PhD student"
-title_separator          : "-"
+# title                    : "PhD student"
+# title_separator          : "-"
 name                     : &name "Meiguang Jin"
 description              : &description "PhD student at Universität Bern"
 url                      : https://meiguangjin.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
