--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/MeiguangJin"
+  github           : "MeiguangJin"
   google_plus      :
   keybase          :
   instagram        :
