--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Meiguang Jin"
-  avatar           : "profile.png"
+  avatar           : "meiguang.JPG"
   bio              : "PhD student at University of Bern"
   location         : "Bern, Switzerland"
   employer         :
