--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 # title                    : "PhD student"
-title_separator          : "Meiguang Jin"
+title_separator          : "Meiguang Jin's Homepage"
 name                     : &name "Meiguang Jin"
 description              : &description "PhD student at Universität Bern"
 url                      : https://meiguangjin.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
