--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "PhD student at University of Bern"
   location         : "Bern, Switzerland"
   employer         :
-#   googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=oi1LErsAAAAJ&hl=en"
   email            : "jin@inf.unibe.ch"
   uri              :
   bitbucket        :
