--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Meiguang Jin"
   avatar           : "meiguang.JPG"
-  bio              : "PhD student at University of Bern"
+  bio              : "PhD"
   location         : "Bern, Switzerland"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=oi1LErsAAAAJ&hl=en"
