--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/meiguang-jin-52a2a060/"
+  linkedin         : "meiguang-jin-52a2a060"
 #   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
