--- a/_config.yml
+++ b/_config.yml
@@ -82,11 +82,11 @@ analytics:
 author:
   name             : "Meiguang Jin"
   avatar           : "meiguang.JPG"
-  bio              : "PhD"
-  location         : "Bern, Switzerland"
+  bio              : "Research Scientist@AutoNavi"
+  location         : "Beijing, China"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=oi1LErsAAAAJ&hl=en"
-  email            : "jin@inf.unibe.ch"
+  email            : "jinmeiguang@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
